--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -289,6 +289,40 @@
   text-align: right;
 }
 
+/* tabs */
+.tab-grid {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin: 15px auto 5px;
+}
+.tab-grid__item {
+  display: table-cell;
+  border: 2px solid #6c757d;
+}
+.tab-grid__button {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  color: #6c757d;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+}
+.tab-grid__button:hover {
+  text-decoration: underline;
+}
+.tab-grid__item--is-active {
+  background-color: #6c757d;
+}
+.tab-grid__item--is-active .tab-grid__button {
+  color: #ffffff;
+}
+
 /* filter */
 .filter-wrap {
   display: table;
@@ -312,7 +346,8 @@
 }
 
 .filter-cell__title,
-.filter-cell__contents {
+.filter-cell__contents,
+.filter-cell__text {
   padding: 5px 20px;
   border: 1px solid #dddddd;
 }
@@ -327,7 +362,12 @@
 .filter-cell__contents {
   display: table-cell;
 }
+.filter-cell__text {
+  display: table-cell;
 
+  padding: 15px 5px;
+  text-align: center;
+}
 /* table */
 .table {
 }
@@ -483,7 +523,7 @@
   padding-top: 0px;
 }
 .page-section {
-  padding-top: 20px;
+  padding-top: 30px;
 }
 .page-section__title {
   font-size: 16px;
