--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -84,9 +84,6 @@
   position: relative;
   display: inline-block;
 }
-.form-datepicker > .datepicker {
-  padding-right: 36px;
-}
 .form-datepicker::after {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -753,7 +750,7 @@
   display: flex;
   flex-direction: column;
   width: 800px;
-  height: 80%;
+  max-height: 80%;
   background-color: #ffffff;
 }
 .layer-header {
