--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -481,7 +481,11 @@
 .organization-box .head_search{padding:12px 16px;background:#FAFAFA}
 .organization-box .head_search .search_icon{position:absolute;top:0;right:0;padding:9px 8px 9px 4px;line-height:0;opacity:0.6;pointer-events:none}
 .box_approveline .head_search{position:absolute;top:0;left:0;right:0;padding:11px 16px} */
-
+.organization-button-group {
+  width: 120px;
+  text-align: center;
+  vertical-align: middle;
+}
 .organization-tree {
   flex: 1;
   min-width: 300px;
