--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -41,7 +41,9 @@
 }
 .form-select {
   display: inline-block;
-  min-width: 210px;
+  /* min-width: 210px; */
+  width: 100%;
+  max-width: 200px;
 }
 .form-textarea {
   display: inline-block;
@@ -206,12 +208,12 @@
   border-color: #b02a37;
 }
 
-.button--outline-prmary {
+.button--outline-primary {
   background-color: transparent;
   border-color: #0d6efd;
   color: #0d6efd;
 }
-.button--outline-prmary:hover {
+.button--outline-primary:hover {
   background-color: #0d6efd;
   border-color: #0d6efd;
   color: #ffffff;
