--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -302,6 +302,38 @@
   font-size: 14px;
   line-height: 1;
 }
+.button-search {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  font: 0/0 a;
+  border: 1px solid #6c757d;
+  border-radius: 4px;
+  color: #6c757d;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+}
+.button-search::before {
+  content: "\f002";
+  font-size: 14px;
+  line-height: 1;
+}
+.button-cancel {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  font: 0/0 a;
+  border: 1px solid #6c757d;
+  border-radius: 4px;
+  color: #6c757d;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+}
+.button-cancel::before {
+  content: "\f00d";
+  font-size: 14px;
+  line-height: 1;
+}
 
 /* button group */
 .button-group {
@@ -395,7 +427,7 @@
   width: 160px;
   display: table-cell;
   background-color: #eeeeee;
-  font-weight: 700;
+  font-weight: 500;
   text-align: center;
   vertical-align: middle;
 }
@@ -808,8 +840,12 @@
   box-sizing: border-box;
   min-height: 50px;
   padding: 5px 15px;
-  background-color: #000000;
+  background-color: #d7191f;
   color: #ffffff;
+}
+.layer-header__title {
+  font-size: 18px;
+  font-weight: 500;
 }
 .layer-body {
   /* flex: 1 0 auto; */
