--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -43,7 +43,7 @@
   display: inline-block;
   /* min-width: 210px; */
   width: 100%;
-  max-width: 210px;
+  max-width: 200px;
 }
 .form-textarea {
   display: inline-block;
@@ -343,6 +343,22 @@
   font-size: 14px;
   line-height: 1;
 }
+.button-save {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  font: 0/0 a;
+  border: 1px solid #6c757d;
+  border-radius: 4px;
+  color: #6c757d;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+}
+.button-save::before {
+  content: "\f0c7";
+  font-size: 14px;
+  line-height: 1;
+}
 
 /* button group */
 .button-group {
@@ -436,7 +452,7 @@
   width: 160px;
   display: table-cell;
   background-color: #eeeeee;
-  font-weight: 500;
+  font-weight: 700;
   text-align: center;
   vertical-align: middle;
 }
@@ -500,7 +516,7 @@
 
 /*  pagenation */
 .pagenation {
-  margin-top: 12px;
+  margin-top: 60px;
   text-align: center;
 }
 .pagenation-item {
@@ -566,7 +582,11 @@
 .organization-box .head_search{padding:12px 16px;background:#FAFAFA}
 .organization-box .head_search .search_icon{position:absolute;top:0;right:0;padding:9px 8px 9px 4px;line-height:0;opacity:0.6;pointer-events:none}
 .box_approveline .head_search{position:absolute;top:0;left:0;right:0;padding:11px 16px} */
-
+.organization-button-group {
+  width: 120px;
+  text-align: center;
+  vertical-align: middle;
+}
 .organization-tree {
   flex: 1;
   min-width: 300px;
@@ -849,7 +869,7 @@
   color: #ffffff;
 }
 .layer-header__title {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
 }
 .layer-body {
