푸쉬관리 추가

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -961,3 +961,8 @@ dl.table-cell > dd {
 .flex-container > .flex-container-fill {
   flex: 1 1 auto;
 }
+
+.label-warning {
+  color: orange;
+  padding-top: 12px;
+}
